applications/ipfs-kubo/ipfs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipfs
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipfs
  strategy:
    rollingUpdate:
      maxUnavailable: 0   # Ensure the old pod is shut down first
      maxSurge: 1         # Allows for one new pod to be created after shutdown
  template:
    metadata:
      labels:
        app: ipfs
    spec:
      containers:
        - name: ipfs
          image: ipfs/kubo:latest
          args: [ "daemon", "--migrate=true", "--agent-version-suffix=docker", "--config-file=/etc/config/config.json" ]
          ports:
            - containerPort: 4001
            - containerPort: 4002
              protocol: UDP
            - containerPort: 4003
            - containerPort: 5001
            - containerPort: 8080
          volumeMounts:
            - name: ipfs-kubo-data
              mountPath: /data/ipfs
            - name: ipfs-kubo-config
              mountPath: /etc/config
              readOnly: true
      volumes:
        - name: ipfs-kubo-data
          persistentVolumeClaim:
            claimName: ipfs-kubo-data
        - name: ipfs-kubo-config
          configMap:
            name: ipfs-kubo-config
